--- a/GardeningServices/app/src/main/res/layout/activity_see_all_specialpackage.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_see_all_specialpackage.xml
@@ -31,9 +31,12 @@
 
     </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcV_specialpackage"
+        android:id="@+id/rcV_special_package"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"/>
+        android:layout_marginEnd="15dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        android:clipToPadding="false"
+        app:spanCount="2" />
 </LinearLayout>
