--- a/GardeningServices/app/src/main/res/layout/item_good.xml
+++ b/GardeningServices/app/src/main/res/layout/item_good.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_category"
-    style="@style/category">
+    style="@style/productCard">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -9,24 +10,14 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/tv_image_good"
             android:layout_width="match_parent"
-            android:layout_margin="5dp"
             android:layout_height="120dp"/>
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_name_good"
-            style="@style/goodTextView"/>
+            style="@style/productNameTextView"
+            android:layout_alignBottom="@id/tv_image_good"/>
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_price_good"
-            style="@style/goodPriceTextView"/>
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical">-->
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="vertical">-->
-<!--                -->
-<!--            </LinearLayout>-->
-<!--        </RelativeLayout>-->
+            style="@style/productPriceTextView"/>
+
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
