--- a/GardeningServices/app/src/main/res/values/colors.xml
+++ b/GardeningServices/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="White1">#FFFFFFFF</color>
     <color name="Yellow">#FF4C4E4C</color>
     <color name="Green">#008000</color>
+    <color name="Pink1">#F2B9B3</color>
 </resources>
