--- a/GardeningServices/app/src/main/res/values/styles.xml
+++ b/GardeningServices/app/src/main/res/values/styles.xml
@@ -16,6 +16,23 @@
         <item name="backgroundTint">@color/Green1</item>
         <item name="android:elevation">50dp</item>
     </style>
+
+    <style name="categoryCardHome" parent="Widget.MaterialComponents.CardView">
+        ...
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:backgroundTint">@color/White2</item>
+        <item name="android:clickable">true</item>
+    </style>
+    <style name="categoryTextViewHome" parent="Widget.MaterialComponents.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:textColor">@color/Green1</item>
+    </style>
     <style name="category" parent="Widget.MaterialComponents.CardView">
         ...
         <item name="android:layout_width">match_parent</item>
@@ -93,19 +110,34 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:textAlignment">center</item>
     </style>
-    <style name="goodTextView" parent="Widget.MaterialComponents.TextView">
+
+    <style name="productCard" parent="Widget.MaterialComponents.CardView">
+        ...
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/White2</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:clickable">true</item>
+    </style>
+    <style name="productNameTextView" parent="Widget.MaterialComponents.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="fontFamily">@font/open_sans_bold</item>
     </style>
-    <style name="goodPriceTextView" parent="Widget.MaterialComponents.TextView">
+    <style name="productPriceTextView" parent="Widget.MaterialComponents.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">5dp</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:textSize">13sp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:textSize">14sp</item>
         <item name="fontFamily">@font/open_sans</item>
+    </style>
+    <style name="buttonAddToCart" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:clickable">true</item>
+        <item name="colorPrimary">@color/Green1</item>
     </style>
 </resources>
