--- a/GardeningServices/app/src/main/res/layout/activity_product_detail.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_product_detail.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ProductDetailActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#FFFFFF">
+
+
 </LinearLayout>
