--- a/GardeningServices/app/src/main/res/layout/fragment_cart.xml
+++ b/GardeningServices/app/src/main/res/layout/fragment_cart.xml
@@ -1,6 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/title_fragment_cart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <TextView
+                android:id="@+id/tv_title_good"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:textSize="20sp"
+                android:text="@string/titleCart"
+                app:fontFamily="@font/open_sans_bold"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"/>
+        </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_fragment_cart">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_list_cart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvC_list_cart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="10dp"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_code"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rvC_list_cart">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <EditText
+                        android:id="@+id/edt_code_discount"
+                        android:layout_width="300dp"
+                        android:background="@drawable/corner_edt"
+                        android:layout_height="40dp"
+                        android:maxLines="1"
+                        android:maxLength="20"
+                        android:padding="5dp"
+                        android:hint="Enter discount code"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginStart="10dp"/>
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/cart_apply_discount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:text="Apply"
+                        android:textColor="@color/white"
+                        android:backgroundTint="@color/Green1"
+                        app:layout_constraintStart_toEndOf="@id/edt_code_discount"
+                        app:layout_constraintTop_toTopOf="parent"/>
+                </LinearLayout>
+<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent">-->
+<!--                    -->
+<!--&lt;!&ndash;                    <EditText&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:id="@+id/edt_code_discount"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_width="0dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:background="@drawable/corner_edt"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_height="40dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:maxLines="1"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:maxLength="20"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:text="ádasdasdasd"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_marginStart="10dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_marginTop="10dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
+<!--&lt;!&ndash;                        app:layout_constraintTop_toTopOf="parent"/>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <androidx.appcompat.widget.AppCompatButton&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_width="0dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_height="40dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_marginTop="10dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:background="@drawable/border_cart_remove"&ndash;&gt;-->
+<!--&lt;!&ndash;                        app:layout_constraintStart_toEndOf="@id/edt_code_discount"&ndash;&gt;-->
+<!--&lt;!&ndash;                        app:layout_constraintTop_toTopOf="parent"/>&ndash;&gt;-->
+<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/layout_code"
+                android:background="@drawable/corner_edt"
+                android:layout_margin="10dp"
+                android:padding="10dp">
+                <TextView
+                    android:id="@+id/cart_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="Item"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/open_sans_semi_bold"/>
+                <TextView
+                    android:id="@+id/cart_item_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="10000"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/open_sans_semi_bold"/>
+                <TextView
+                    android:id="@+id/cart_shipping"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cart_item"
+                    android:layout_marginTop="10dp"
+                    android:text="Item"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/open_sans_semi_bold"/>
+                <TextView
+                    android:id="@+id/cart_shipping_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cart_item_price"
+                    android:layout_marginTop="10dp"
+                    android:text="10000"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/open_sans_semi_bold"/>
+                <TextView
+                    android:id="@+id/cart_import_charges"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cart_shipping"
+                    android:layout_marginTop="10dp"
+                    android:text="Item"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/open_sans_semi_bold"/>
+                <TextView
+                    android:id="@+id/cart_import_charges_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cart_shipping_price"
+                    android:layout_marginTop="10dp"
+                    android:text="10000"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/open_sans_semi_bold"/>
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cart_import_charges"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/Green1"
+                    android:fontFamily="@font/open_sans_semi_bold"/>
+                <TextView
+                    android:id="@+id/cart_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cart_import_charges"
+                    android:layout_marginTop="20dp"
+                    android:text="Item"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/open_sans_semi_bold"/>
+                <TextView
+                    android:id="@+id/cart_total_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cart_import_charges_price"
+                    android:layout_marginTop="20dp"
+                    android:text="10000"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/open_sans_semi_bold"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/layout_price"
+                android:backgroundTint="@color/Green1"
+                android:layout_margin="10dp"
+                android:text="Check out"
+                android:textColor="@color/white"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
