--- a/GardeningServices/app/src/main/res/drawable/border_cart_add.xml
+++ b/GardeningServices/app/src/main/res/drawable/border_cart_add.xml
@@ -4,7 +4,7 @@
         android:shape="rectangle">
         <!-- Set màu nền-->
         <solid
-            android:color="@color/white" >
+            android:color="@color/Green1" >
         </solid>
         <!-- đặt thuộc tính màu và độ rộng của đường viền -->
         <stroke
@@ -12,6 +12,7 @@
             android:color="@color/Gray3" >
         </stroke>
         <corners
-            android:radius="5dp" >
+            android:bottomLeftRadius="5dp"
+            android:topLeftRadius="5dp">
         </corners>
     </shape>
