--- a/GardeningServices/app/src/main/res/layout/fragment_cart.xml
+++ b/GardeningServices/app/src/main/res/layout/fragment_cart.xml
@@ -123,7 +123,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:text="Item"
+                    android:text="@string/Items"
                     android:textSize="18sp"
                     android:fontFamily="@font/open_sans_semi_bold"/>
                 <TextView
@@ -132,7 +132,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:text="10000"
+                    android:text="@string/Number"
                     android:textSize="18sp"
                     android:fontFamily="@font/open_sans_semi_bold"/>
                 <TextView
@@ -142,7 +142,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cart_item"
                     android:layout_marginTop="10dp"
-                    android:text="Item"
+                    android:text="@string/Shipping"
                     android:textSize="18sp"
                     android:fontFamily="@font/open_sans_semi_bold"/>
                 <TextView
@@ -152,7 +152,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cart_item_price"
                     android:layout_marginTop="10dp"
-                    android:text="10000"
+                    android:text="@string/Number"
                     android:textSize="18sp"
                     android:fontFamily="@font/open_sans_semi_bold"/>
                 <TextView
@@ -162,7 +162,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cart_shipping"
                     android:layout_marginTop="10dp"
-                    android:text="Item"
+                    android:text="@string/ImportCharges"
                     android:textSize="18sp"
                     android:fontFamily="@font/open_sans_semi_bold"/>
                 <TextView
@@ -172,7 +172,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cart_shipping_price"
                     android:layout_marginTop="10dp"
-                    android:text="10000"
+                    android:text="@string/Number"
                     android:textSize="18sp"
                     android:fontFamily="@font/open_sans_semi_bold"/>
                 <View
@@ -191,7 +191,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cart_import_charges"
                     android:layout_marginTop="20dp"
-                    android:text="Item"
+                    android:text="@string/Total"
                     android:textSize="18sp"
                     android:fontFamily="@font/open_sans_semi_bold"/>
                 <TextView
@@ -201,7 +201,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cart_import_charges_price"
                     android:layout_marginTop="20dp"
-                    android:text="10000"
+                    android:text="@string/Number"
                     android:textSize="18sp"
                     android:fontFamily="@font/open_sans_semi_bold"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
